--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,22 +2,22 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700');
 
 // Colors
-$color-yellow:#ffc914;
-$color-grey:#b5c2b7;
-$color-black:rgb(46, 40, 42);
-$color-blue:#00a7e1;
-$color-cream:#eddea4;
-$color-white:rgb(245, 243, 245);
+$color-yellow: #ffc914;
+$color-grey: #b5c2b7;
+$color-black: rgb(46, 40, 42);
+$color-blue: #00a7e1;
+$color-cream: #eddea4;
+$color-white: rgb(245, 243, 245);
 
 // Reset
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
 // Body
-body{
+body {
   font-family: 'PT Sans', sans-serif;
   background: $color-white;
   color: $color-black;
@@ -39,5 +39,60 @@ body{
 
   &__img {
 
+  }
+}
+
+// header
+.header {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+
+  // for the rest of elements
+  position: relative;
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    background: url("../video/Working-it/Snapshots/Working-it.jpg")center/cover fixed no-repeat;
+  }
+}
+
+.banner {
+  margin-left: 2rem;
+  border-left: .5rem solid $color-yellow;
+
+  &__title {
+    font-size: 3rem;
+    letter-spacing: .25rem;
+    margin-left: 1rem;
+    text-transform: uppercase;
+    color: $color-blue;
+  }
+
+  &__title-name {
+    color: $color-yellow;
+    font-size: 4rem;
+    font-style: italic;
+    text-decoration: underline;
+  }
+}
+
+// video
+.video {
+  // header is the parent of video container, so we need to add position relative there
+  &__container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
+
+  &__item {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
