--- a/css/main.css
+++ b/css/main.css
@@ -58,3 +58,12 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover; }
+
+.video__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(245, 243, 245, 0.3);
+  z-index: 2; }
