--- a/sass/main.scss
+++ b/sass/main.scss
@@ -95,4 +95,14 @@ body {
     height: 100%;
     object-fit: cover;
   }
+
+  &__overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(245, 243, 245, 0.3);
+    z-index: 2;
+  }
 }
