--- a/sass/main.scss
+++ b/sass/main.scss
@@ -158,6 +158,7 @@ body {
     font-size: 1.5rem;
     padding: .5rem;
     transition: all .4s linear;
+    text-transform: capitalize;
 
     &:hover {
       background-color: $color-black;
